--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   text-transform: uppercase;
 } */
 
-#meals {
+/* #meals {
   width: 90%;
   max-width: 70rem;
   list-style: none;
@@ -235,4 +235,4 @@ body {
     opacity: 1;
     transform: translateY(0);
   }
-}
+} */
