--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,27 @@ body {
   min-height: 100vh;
 }
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #1e293b;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #1e293b;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #64748b;
+}
+
+
 
 /* h1 {
   font-family: 'Lato', sans-serif;
